# flr-core-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake_dev.cmake
api/: README.md  flr.i
api/ruby/: extconf.rb  runme.rb
example/: CMakeLists.txt  main.cpp
include/flr-core/: flr.h  flr_log_def.h  flr_ui_def.h
src/: constant.h  flr.cpp
src/util/: array_util.cpp  array_util.h  asset_util.cpp  asset_util.h  code_util.cpp  code_util.h  file_util.cpp  file_util.h
